--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,14 @@
 		<title>SICI</title>
 		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" media="all">
 		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="/css/app.css">
-		<link rel="stylesheet" href="/css/animate.css">
 		<link rel="stylesheet" href="/bower_components/angular-animate-css/build/nga.min.css">
 		<link rel="stylesheet" href="/bower_components/nvd3/build/nv.d3.min.css">
 		<link rel="stylesheet" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
 		<link rel="stylesheet" href="/bower_components/angularjs-toaster/toaster.min.css">
 		<link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css">
+		<link rel="stylesheet" href="/css/app.css">
+		<link rel="stylesheet" href="/css/animate.css">
 		<link rel="stylesheet" href="/js/lib/feedback.css">
 	</head>
 	<body>
@@ -96,7 +97,7 @@
 			</div>
 		</div>
 		<div class="container-fluid">
-			<div id="marginontoosmall" class="hidden-lg hidden-print" style="height:100px"></div>
+			<div id="marginontoosmall" class="hidden-lg hidden-md hidden-print" style="height:100px"></div>
 			<div ng-view></div>
 			<toaster-container></toaster-container>
 		</div>
@@ -142,6 +143,7 @@
 
 		<script src="/bower_components/ng-file-upload/ng-file-upload.min.js"></script>
 
+		<script src="/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
 		<script src="/bower_components/angular-translate/angular-translate.js"></script>
 		<script src="/bower_components/allmighty-autocomplete/script/autocomplete.js"></script>
 		<script src="/bower_components/angularjs-toaster/toaster.min.js"></script>
@@ -193,8 +195,6 @@
 		<script src="/js/controllers/registroactividad.js"></script>
 
 		<script src="/bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
-		<script src="/bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
-		<script src="/bower_components/jquery.easy-pie-chart/dist/angular.easypiechart.js"></script>
 		<script src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 		<!--<script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>-->
 		<!--<script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>-->
