--- a/public/index.html
+++ b/public/index.html
@@ -182,6 +182,7 @@
 		<script src="/js/controllers/detallesorganica.js"></script>
 		<script src="/js/controllers/debug.js"></script>
 		<script src="/js/controllers/feedback.js"></script>
+		<script src="/js/controllers/compromiso.js"></script>
 		<script src="/js/controllers/actividadcarta.js"></script>
 		<script src="/js/controllers/carta.js"></script>
 		<script src="/js/controllers/cartaprintable.js"></script>
